src/test/deca/syntax/valid/created/type_alone/FLOAT_alone.deca
// Description :
// 		Test utilisation type seul
// Resultats:
// 		OK

{
	float;
}
