src/test/deca/syntax/invalid/created/bloc_alone/else_alone.deca
// Description:
//  	Utilisant identifiant de bloc seul
// Resultats :
// 	Ligne 7 : mismatched input 'else' expecting ...

{
	else;
}
